fixed some spacing issues

--- a/src/app/styles/_grid.scss
+++ b/src/app/styles/_grid.scss
@@ -1,4 +1,4 @@
-$sizes: (sm: 0px, lg: 540px);
+$sizes: (sm: 0px, md: 960px, lg: 1420px);
 $gutter: 2%;
 
 .row {
